--- a/css/syle.css
+++ b/css/syle.css
@@ -1,3 +1,14 @@
+/*RESET*/
 * {
-    background-color: rgb(216, 211, 205);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/*GENERAL*/
+body {
+    background-color: rgb(216, 211, 205);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*HEADER*/
