--- a/css/syle.css
+++ b/css/syle.css
@@ -7,8 +7,23 @@
 
 /*GENERAL*/
 body {
-    background-color: rgb(216, 211, 205);
+    background-color: rgb(222, 237, 238);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 /*HEADER*/
+header {
+    background-color: white;
+    padding: 0 20px;
+    height: 100px;
+    line-height: 100px;
+}
+
+.logo {
+    vertical-align: middle;
+}
+
+.logo-title {
+    display: inline;
+    vertical-align: middle;
+}
